# leenkz

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.frontend.dev  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.example  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_snapshot_deduplication.py
leenkz/: __init__.py  cli.py
leenkz/api/: __init__.py  deps.py  main.py  schemas.py
leenkz/api/routers/: auth.py  links.py  shares.py  snapshots.py  tags.py  users.py
leenkz/core/: __init__.py  auth.py  config.py  database.py  seed.py  snapshot.py
leenkz/models/: __init__.py  cloud_storage.py  ftp.py  git.py  http.py  network.py  s3.py  storage.py
scripts/: dev.sh  init_db.py  init_db.sh  setup-shadcn.sh
src/: App.tsx  main.tsx
src/components/auth/: protected-route.tsx
src/components/snapshots/: SnapshotButton.tsx  SnapshotList.tsx  SnapshotViewer.tsx
src/components/ui/: loading-spinner.tsx  toaster.tsx
src/contexts/: auth-context.tsx
src/pages/: admin.tsx  dashboard.tsx  landing.tsx  login.tsx  register.tsx  snapshot-viewer.tsx
tests/: __init__.py  test_auth.py  test_main.py  test_snapshot_deduplication.py  test_snapshots.py
